# clip-model-serving-server

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  justfile  main.py  pyproject.toml
app/: main.py
app/api/: __init__.py
app/api/auth/: __init__.py  auth.py
app/api/clip/: __init__.py  clip.py
app/core/: auth.py  database.py  dependencies.py  exceptions.py  logger.py  security.py
app/core/auth/: __init__.py  dependencies.py  jwt.py  password.py
app/core/config/: __init__.py  base.py  development.py
app/entity/controller/clip/: __init__.py
app/entity/model/: generated.py
app/entity/repository/search_feedback/: __init__.py
app/entity/repository/search_log/: __init__.py
app/entity/use_case/clip/: __init__.py
app/middleware/: __init__.py  timing.py
app/repository/search_feedback/: __init__.py  register.py  search_feedback.py
app/repository/search_log/: __init__.py  register.py  search_log.py
app/repository/user/: __init__.py  register.py  user.py
app/service/clip/: __init__.py  clip.py  clip_service.py  register.py
app/service/reranking/: __init__.py  register.py  reranking.py
app/use_case/auth/: __init__.py  auth.py  register.py
app/use_case/clip/: __init__.py  clip.py  feedback.py  register.py  search.py
migrations/: env.py
migrations/versions/: 20251030134405758_add_search_logs_table.py  20251030141210670_add_search_feedbacks_table.py  20251030221112207_add_users_table.py  20251030221559188_add_user_seeds_data.py  20251030231120398_add_user_id_in_search_logs.py  20251101230647320_remove_search_id_unique_constraint_in_.py
script/: precompute_image_embeddings.py
test/api/clip/: test_clip.py
